--- a/Diabetes_prediction.ipynb
+++ b/Diabetes_prediction.ipynb
@@ -600,7 +600,158 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Preparazione dei dati"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Andiamo ora a preparare i dati, svolgendo due compiti principali:\n",
+    "- gestione dei valori nulli\n",
+    "- gestione delle feature categoriche"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Innanzitutto, andiamo a controllare se abbiamo valori nulli."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                 0\n",
+       "age                    0\n",
+       "hypertension           0\n",
+       "heart_disease          0\n",
+       "smoking_history        0\n",
+       "bmi                    0\n",
+       "HbA1c_level            0\n",
+       "blood_glucose_level    0\n",
+       "diabetes               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patients.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non abbiamo valori nulli, dunque non dobbiamo intervenire su questo aspetto. Ora andiamo a convertire la feature categorica in valore numerico tramite il metodo di binarizzazione."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smoke_dumm = patients['smoking_history'].str.get_dummies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>HbA1c_level</th>\n",
+       "      <th>blood_glucose_level</th>\n",
+       "      <th>diabetes</th>\n",
+       "      <th>no info smoke</th>\n",
+       "      <th>current smoker</th>\n",
+       "      <th>ever smoke</th>\n",
+       "      <th>former smoker</th>\n",
+       "      <th>never smoke</th>\n",
+       "      <th>not current smoker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25.19</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender   age  hypertension  heart_disease    bmi  HbA1c_level  \\\n",
+       "0       1  80.0             0              1  25.19          6.6   \n",
+       "\n",
+       "   blood_glucose_level  diabetes  no info smoke  current smoker  ever smoke  \\\n",
+       "0                  140         0              0               0           0   \n",
+       "\n",
+       "   former smoker  never smoke  not current smoker  \n",
+       "0              0            1                   0  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patients_num = patients.merge(smoke_dumm, left_index=True, right_index=True)\n",
+    "patients_num = patients_num.drop(columns=[\"smoking_history\"])\n",
+    "patients_num = patients_num.rename(columns={\"never\": \"never smoke\", \"current\": \"current smoker\", \"ever\": \"ever smoke\", \n",
+    "                                            \"No Info\": \"no info smoke\", \"former\": \"former smoker\", \"not current\": \"not current smoker\"})\n",
+    "patients_num.head(1)"
+   ]
   }
  ],
  "metadata": {
