--- a/Diabetes_prediction.ipynb
+++ b/Diabetes_prediction.ipynb
@@ -1981,7 +1981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dopo aver allenato cinque modelli di classificazione, andiamo a vedere quale si è rivelato il migliore tramite la valutazione delle metriche _MSE_, _R squared_ ed _errore relativo_."
+    "Dopo aver allenato cinque modelli di classificazione, andiamo a vedere quale si è rivelato il migliore tramite la valutazione delle metriche _MSE_ e lo _score_ del modello."
    ]
   },
   {
